# AgenticRouter

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
agentic_router/: __init__.py  autogate.py  cli.py  config_studio.py  config_validation.py  context.py  contracts.py  diff_review.py  enterprise.py  evaluator.py  evidence.py  integration.py  models.py  normalizer.py  observability.py  outcomes.py  packets.py  pilot.py  profiles.py  projects.py  remediation.py  router.py  rules.py  sessions.py  shadow.py  simulator.py  web.py
data/: api_contracts.json  autogate_examples.json  autogate_policies.json  config_schemas.json  context_policies.json  contract_policies.json  diff_review_examples.json  diff_risk_rules.json  enterprise_gateway_templates.json  evidence_examples.json  evidence_policies.json  examples.json  fallback_policies.json  golden_tasks.json  litellm_model_aliases.json  model_aliases.json  models.json  normalizer_adversarial_tasks.json  projects.json  remediation_examples.json  remediation_policies.json  routing_profiles.json  routing_rules.json  run_contract_examples.json  simulation_scenarios.json  task_risk_signals.json  task_taxonomy.json  validation_playbooks.json
docs/: api_reference.md  architecture_overview.md  config_studio.md  demo_script.md  devspace_integration_contract.md  enterprise_gateway_strategy.md  litellm_export_guide.md  local_observability.md  pilot_readiness_report.md  quickstart_demo.md  rollout_plan.md  routing_methodology.md  scenario_simulator.md  shadow_mode_rollout.md
examples/: auth_change.diff  autogate_failed.json  (+4 more)
(+51 files in other folders)
