[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-router"
version = "0.1.0"
description = "Rule-based DevSpace smart router MVP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
agentic-router = "agentic_router.cli:main"

[tool.setuptools]
packages = ["agentic_router"]

